--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/navigation_bar.css">
+    <nav class="navigation_bar">
+
+    </nav>
 </head>
 <body>
     <h1>Hello world</h1>
