--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,32 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/css/navigation_bar.css">
-    <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/css/body.css"> 
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-</head>
-
-<body>
-    <div class="app">
-        <div class="navigation_bar__container">
-            <nav class ="navigation_bar">
-               <ul>
-                   <li><a href="/shop">Shop</a></li>
-                   <li><a href="/cart">Cart</a></li>
-                   <li><a href="/profile">Profile</a></li>
-                   <li><a href="/admin/shop">Admin</a></li>
-               </ul>
-            </nav>
-        </div>
-        <div class ="body_container">
-            <h1>hello world</h1>
-        </div>
-    </div>
-</body>
-
-</html>
+<%- include('./includes/head.ejs') %>
+     <h1>Hello world</h1>
+<%- include('./includes/ending.ejs') %>
