--- a/public/css/main.css
+++ b/public/css/main.css
@@ -14,7 +14,18 @@ head {
     margin: 0;
 }
 .app {
-    width: 100%;
-    height: 100%;
     position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;  
+    margin-top: 5%;
+    z-index: 300;
+}
+@media(max-width : 768px) {
+    .app {
+        margin-top: 5rem;
+    }
 }
