--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -1,6 +1,6 @@
 <%- include('../includes/head.ejs') %>
 <link rel="stylesheet" href="/css/shop/shop.css">
 <div class ="shop_container">
-     <h1>Hello shop</h1>
+     <h1>Hello mr Admin</h1>
 </div>
 <%- include('../includes/ending.ejs') %>
