--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,9 @@
 <%- include('./includes/head.ejs') %>
-     <h1>Hello world</h1>
+<link rel="stylesheet" href="/css/main/main_page.css">
+<div class ="main_page">
+     <h1>Welcome to my Project</h1>
+</div>
+<div class ="featured_page">
+      
+</div>
 <%- include('./includes/ending.ejs') %>
