--- a/public/css/main.css
+++ b/public/css/main.css
@@ -20,12 +20,13 @@ head {
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100%;  
-    margin-top: 5%;
+    margin-top: 1.5%;
+    padding: 2.5% 0 2.5% 0;
     z-index: 300;
+    background-color: #ddd;
 }
 @media(max-width : 768px) {
     .app {
-        margin-top: 5rem;
+        margin-top: 3rem;
     }
 }
