--- a/views/includes/nav_bar.ejs
+++ b/views/includes/nav_bar.ejs
@@ -7,7 +7,8 @@
             <li><a href="/">Home</a></li>
             <li><a href="/shop">Shop</a></li>
             <li><a href="/cart">Cart</a></li>
-            <li><a href="/admin/products">Add product</a></li>
+            <li><a href="/admin/products">Admin</a></li>
+            <li><a href="/admin/add-product">Add Product</a></li>
 
         </ul>
     </nav>
