--- a/public/css/main.css
+++ b/public/css/main.css
@@ -20,6 +20,7 @@ head {
     justify-content: center;
     align-items: center;
     width: 100%;
+    height: 90%;
     margin-top: 1.5%;
     padding: 2.5% 0 2.5% 0;
     z-index: 300;
