--- a/views/includes/nav_bar.ejs
+++ b/views/includes/nav_bar.ejs
@@ -6,7 +6,7 @@
         <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/shop">Shop</a></li>
-            <li><a href="/cart">Cart</a></li>
+            <li><a href="/add-user">Add user</a></li>
             <li><a href="/admin/products">Admin</a></li>
             <li><a href="/admin/add-product">Add Product</a></li>
 
