Login component added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,7 @@
 <link rel="stylesheet" href="/css/main/main_page.css">
 <div class ="main_page">
      <h1>Welcome to my Project</h1>
+     <a href="/login">Login</a>
 </div>
 <div class ="featured_page">
       
