SQL Updated database

--- a/views/user/add-user.ejs
+++ b/views/user/add-user.ejs
@@ -7,6 +7,10 @@
     <form method="POST" action="/add-user">
         <label>username</label>
         <input type="text" name="username" id="username" placeholder="user name">
+        <label>First Name</label>
+        <input type="text" name="first" id="first" placeholder="first name">
+        <label>Last Name</label>
+        <input type="text" name="last" id="last" placeholder="last name">
         <label>email</label>
         <input type="email" name="email" id="email" placeholder="test@test.com">
         <label>password</label>
