--- a/public/css/user/user.css
+++ b/public/css/user/user.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     width: 22.5rem;
-    height: 65%;
+    height: 85%;
     background-color: white;
     box-shadow: 0px 0px 15px -5px;
     border-radius: 4px;
@@ -14,10 +14,11 @@
     align-items: center;
     text-align: center;
     width: 100%;
-    height: 35%;
+    height: 30%;
     background-color: #ABEDC1;
     color: #3b3b3b;
     border-radius: 4px 4px 0 0 ;
+    margin-bottom: 5px;
 }
 .create_user__container form {
     display: flex;
