--- a/views/includes/nav_bar.ejs
+++ b/views/includes/nav_bar.ejs
@@ -9,6 +9,7 @@
             <li><a href="/add-user">Add user</a></li>
             <li><a href="/admin/products">Admin</a></li>
             <li><a href="/admin/add-product">Add Product</a></li>
+            <li><a href="/login">Login</a></li>
 
         </ul>
     </nav>
