--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,32 @@
 <%- include('./includes/head.ejs') %>
 <link rel="stylesheet" href="/css/main/main_page.css">
-<div class ="main_page">
-     <h1>Welcome to my Project</h1>
-     <a href="/login">Login</a>
+<div class="main_page">
+     <div class="main_page__welcome">
+          <div class="main_page__card">
+               <div class="main_page__card_title">
+                    <h1>Im selling!</h1>
+               </div>
+               <div class="main_page__card_title_info">
+
+                    <p>In our page you can publish your products for the whole world</p>
+                    <p>You can create products , you can choose price, types, and more... enjoy having a lot of freedom
+                         to create products</p>
+               </div>
+               <button>Start</button>
+          </div>
+          <div class="main_page__card">
+               <div class="main_page__card_title">
+                    <h1>Im buying!</h1>
+               </div>
+               <div class="main_page__card_title_info">
+                    <p>In our page you will found thousands of products from all arround the world</p>
+                    <p>we have a lot of products, from clothes ,to digital services, low and high prices</p>
+               </div>
+               <button>Start</button>
+          </div>
+     </div>
 </div>
-<div class ="featured_page">
-      
+<div class="featured_page">
+
 </div>
 <%- include('./includes/ending.ejs') %>
