--- a/public/css/main.css
+++ b/public/css/main.css
@@ -24,7 +24,7 @@ head {
     margin-top: 1.5%;
     padding: 2.5% 0 2.5% 0;
     z-index: 300;
-    background-color: #ddd;
+    background-color:#1b1b1b;
 }
 @media(max-width : 768px) {
     .app {
