--- a/public/css/main/main_page.css
+++ b/public/css/main/main_page.css
@@ -3,14 +3,72 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 97.5%;
-    height: 40rem;
-    background-color: white;
-    box-shadow: 0 0 15px -5px black;
+    width: 75%;
+    margin-top: 15px;
 }
-.main_page h1{
-    color: grey;
-    font-size: 7vmin;
+.main_page__welcome {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 40rem;
+}
+.main_page__card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 45%;
+    height: 95%;
+    background-color: #2b2b2b;
+    box-shadow: 0 0 25px -10px;
+    margin: 15px;
+    border-radius: 4px;
+
+}
+.main_page__card_title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 10%;
+    background-color: #2D3EFA;
+    border-radius: 4px 4px 0 0;
+    text-align: center;
+    text-indent: 0px;
+}
+.main_page__card_title_info {
+    width: 80%;
+    height: 65%;
+    margin-top: 15px;
+    text-align: center;
+    color: #cccccc;
+}
+.main_page__card button {
+    width: 50%;
+    height: 2.5rem;
+    margin-top: 5%;
+    border: none;
+    background-color: #1b1b1b;
+    box-shadow: 0 0 15px -15px black;
+    color: white;
+    transition : background-color 250ms ease;
+}
+.main_page__card button:hover{
+    background-color: #2D3EFA;
+    transition : background-color 250ms ease;
+}
+.main_page__card_title h1 {
+    color: white;
+    font-size: 4vmin;
+}
+.main_page__card_title p {
+    color: #cccccc;
+    font-size: 3.5vmin;
+}
+.main_page__welcome img {
+    width: 100%;
+    height: 100%;
 }
 .featured_page {
     display: flex;
@@ -18,7 +76,7 @@
     align-items: center;
     justify-content: center;
     width: 90%;
-    height: 15rem;
+    height: 10%;
     margin: 0.5% 0 0.5% 0;
     background-color: white;
     box-shadow: 0 0 15px -5px black;
