--- a/public/css/navigation_bar.css
+++ b/public/css/navigation_bar.css
@@ -11,7 +11,7 @@
     align-items: center;
     width: 100%;
     height: 100%;
-    background-color: #1F9491;
+    background-color: #1b1b1b;
     box-shadow: 0 0 15px -5px;
 }
 .navigation_bar ul {
@@ -29,19 +29,19 @@
     margin: 0 0.5% 0 0.5%;
     list-style: none;
     border-radius: 2px;
+    transition: background-color 250ms ease-in-out;
 }
 .navigation_bar a {
     padding: 5%;
-    color: #1b1b1b;
+    color:white;
     text-decoration: none;
     font-weight: bold;
-    font-size: 2.5vmin; 
+    font-size: 2vmin; 
 }
 .navigation_bar li:hover {
-   background-color: #ABEDC1;
+   background-color: #2D3EFA;
    box-shadow: 0 0 10px -5px;
-
-
+   transition: background-color 250ms ease-in-out;
 }
 @media(max-width : 768px) {
  .navigation_bar__container {
