Shop displaying add

--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -4,7 +4,7 @@
     <div class="create_user__head">
         <h1>Welcome</h1>
     </div>
-    <form method="POST" action="/add-user">
+    <form method="POST" action="/login">
         <label>username</label>
         <input type="text" name="username" id="username" placeholder="user name">
         <label>password</label>
