--- a/public/css/shop/shop.css
+++ b/public/css/shop/shop.css
@@ -4,6 +4,47 @@
     align-items: center;
     width: 95%;
     height: 80rem;
-    background-color: white;
+    margin: 25px 0 0 0;
+    background-color: #2b2b2b;
     box-shadow: 0 0 15px -5px black;
+}
+.products {
+    margin: 0;
+    width: 100%;
+}
+.product {
+    width: 20%;
+    height: 25rem;
+    margin: 1vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #cccccc;
+    box-shadow: 0 0 20px -10px;
+    border-radius: 4px;
+}
+.product_title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    height: 15%;
+    background-color: #1b1b1b;
+}
+.product_title p {
+    color: #ccc;
+    font-weight: bold;
+    font-size: 2.5vmin;
+}
+.product_price{
+    text-align: right;
+    width: 100%;
+    height: 15%;
+    padding: 5px;
+}
+.product_image {
+    text-align: center;
+    width: 100%;
+    height: 70%;
 }
