--- a/views/shop/shop.ejs
+++ b/views/shop/shop.ejs
@@ -1,6 +1,26 @@
 <%- include('../includes/head.ejs') %>
 <link rel="stylesheet" href="/css/shop/shop.css">
-<div class ="shop_container">
-     <h1>Hello shop</h1>
+<div class="shop_container">
+     <%if(products.length !== 0){%>
+     <ul class ="products">
+          <% for(let product of products) {%>
+          <li class ="product">
+               <div class="product_title">
+                    <p><%=product.title%></p>
+               </div>
+               <div class="product_image">
+                    <img src="<%=product.image%>" alt="product_img">
+               </div>
+               <div class ="product_price">
+                    <p><%=product.price%></p>
+               </div>
+          </li>
+          <%}%>
+          </ul>
+     <%}else{%>
+          <h1>No products found</h1>
+          <%}%>
+   
+
 </div>
 <%- include('../includes/ending.ejs') %>
